--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,3 +1,74 @@
-/* This is a multi-line
-comment. Add your CSS code
-from Unit 1 - 5 below  */
+
+.card {
+    height:200px; 
+    width:150px;
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color:#FFFF99;
+    float: left;
+    margin: 8%;
+}
+
+h1 {
+    color:rgb(2, 132, 130);
+    text-align: center;  
+    }
+
+h2 {
+    color: #ffd700;
+    text-align: center;  
+    }
+
+body {
+    text-align: center;
+    }
+
+.name {
+    color: #ff0000;
+    font-style: italic;
+    }
+
+.board {
+	height: 50%;
+	width: 50%;
+    display: inline-block;
+    }
+
+nav {
+  background-color: #808080;
+      }
+
+ a.style1 {
+        background-color: #ffbf00;
+        color: white;
+        text-decoration: none;
+        display: block;
+        float: left;
+        padding: 35px;
+    }
+a.style2
+    {
+    text-decoration: none;
+    }
+a.style1:hover {
+        background-color: #ee5f3c;
+    }
+
+.clearfix:after {
+        visibility: hidden;
+        display: block;
+        content: " ";
+        clear: both;
+        height: 0;
+        font-size: 0;
+      }
+
+
+footer {
+    font-size: 10px;
+    color: white;
+    background-color: #808080;
+    padding:10px;
+    text-align: center;              
+    }
+
